--- a/labs/student/lab-3-student.qmd
+++ b/labs/student/lab-3-student.qmd
@@ -1,249 +1,237 @@
 ---
-title: "Lab 3: Student Evaluations of Teaching"
+title: "Lab 3: Exploring Rodents with `ggplot2`"
 author: "Your name here!"
 format: html
 editor: source
 embed-resources: true
+execute: 
+  eval: false
+  echo: fenced
 ---
-
-In this lab, we will be using the `dplyr` package to explore student evaluations
-of teaching data. 
-
-**You are expected to use functions from `dplyr` to do your data manipulation!**
 
 # Part 1: GitHub Workflow
 
-Now that you have the Lab 2 repository cloned, you need to make sure you can 
-successfully push to GitHub. To do this you need to:
 
--   Open the `lab-3-student.qmd` file (in the lower right hand corner). 
--   Change the `author` line at the top of the document (in the YAML) to your
-name. 
--   Save your file either by clicking on the blue floppy disk or with a shortcut
-(command / control + s). 
--   Click the "Git" tab in upper right pane
--   Check the "Staged" box for the `lab-3-student.qmd` file (the file you
-changed)
--   Click "Commit"
--   In the box that opens, type a message in "Commit message", such as
-"Added my name".
--   Click "Commit".
--   Click the green "Push" button to send your local changes to GitHub.
 
-RStudio will display something like:
 
-```         
->>> /usr/bin/git push origin HEAD:refs/heads/main
-To https://github.com/atheobold/introduction-to-quarto-allison-theobold.git
-   3a2171f..6d58539  HEAD -> main
-```
+## Seeking Help
 
-Now you are ready to go! Remember, as you are going through the lab I would 
-strongly recommend rendering your HTML and committing your after **every** 
-question! 
+Part of learning to program is learning from a variety of resources. Thus, I expect you will use resources that you find on the internet. There is, however, an important balance between copying someone else's code and *using their code to learn*. Therefore, if you use external resources, I want to know about it. 
 
-# Part 2: Some Words of Advice
+- If you used Google, you are expected to "inform" me of any resources you used by **pasting the link to the resource in a code comment next to where you used that resource**.
 
-Part of learning to program is learning from a variety of resources. Thus, I
-expect you will use resources that you find on the internet. There is, however,
-an important balance between copying someone else's code and *using their code to learn*.
-Therefore, if you use external resources, I want to know about it.
+- If you used ChatGPT, you are expected to "inform" me of the assistance you received by (1) indicating somewhere in the problem that you used ChatGPT (e.g., below the question prompt or as a code comment), and (2) downloading and attaching the `.txt` file containing your **entire** conversation with ChatGPT.
 
--   If you used Google, you are expected to "inform" me of any resources you
-used by **pasting the link to the resource in a code comment next to where you used that resource**.
+Additionally, you are permitted and encouraged to work with your peers as you complete lab assignments, but **you are expected to do your own work**. Copying from each other is cheating, and letting people copy from you is also cheating. Please don't do either of those things.
 
--   If you used ChatGPT, you are expected to "inform" me of the assistance you
-received by (1) indicating somewhere in the problem that you used ChatGPT 
-(e.g., below the question prompt or as a code comment), and (2) downloading and
-attaching the `.txt` file containing your **entire** conversation with ChatGPT.
+# Lab Instructions
 
-Additionally, you are permitted and encouraged to work with your peers as you
-complete lab assignments, but **you are expected to do your own work**. Copying
-from each other is cheating, and letting people copy from you is also cheating.
-Please don't do either of those things.
+The questions in this lab are noted with numbers and boldface. Each question will require you to produce code, whether it is one line or multiple lines. 
 
-## Setting Up Your Code Chunks
+This document is quite plain, meaning it does not have any special formatting. As part of your demonstration of creating professional looking Quarto documents, **I would encourage you to spice your documents up (e.g., declaring execution options, specifying how your figures should be output, formatting your code output, etc.).**
 
--   The first chunk of this Quarto document should be used to *declare your libraries* (probably only `tidyverse` for now).
--   The second chunk of your Quarto document should be to *load in your data*.
+# Setup
 
-## Save Regularly, Render Often
-
--   Be sure to **save** your work regularly.
--   Be sure to **render** your file every so often, to check for errors and make
-sure it looks nice.
-    -   Make sure your Quarto document does not contain `View(dataset)` or `install.packages("package")`, both of these will prevent rendering.
-    -   Check your Quarto document for occasions when you looked at the data by
-    typing the name of the data frame. Leaving these in means the whole dataset
-    will print out and this looks unprofessional. **Remove these!**
-    -   If all else fails, you can set your execution options to `error: true`,
-    which will allow the file to render even if errors are present.
-
-# Part 3: Let's Start Working with the Data!
-
-## The Data
-
-The `teacher_evals` dataset contains student evaluations of reaching (SET)
-collected from students at a University in Poland. There are SET surveys from 
-students in all fields and all levels of study offered by the university.
-
-The SET questionnaire that every student at this university completes is as
-follows:
-
-> Evaluation survey of the teaching staff of University of Poland. Please
-> complete the following evaluation form, which aims to assess the lecturer’s
-> performance. Only one answer should be indicated for each question. The
-> answers are coded in the following way: 5 - I strongly agree; 4 - I agree;
-> 3 - Neutral; 2 - I don’t agree; 1 - I strongly don’t agree.
->
-> Question 1: I learned a lot during the course.
->
-> Question 2: I think that the knowledge acquired during the course is very
-> useful.
->
-> Question 3: The professor used activities to make the class more engaging.
->
-> Question 4: If it was possible, I would enroll for a course conducted by this
-> lecturer again.
->
-> Question 5: The classes started on time.
->
-> Question 6: The lecturer always used time efficiently.
->
-> Question 7: The lecturer delivered the class content in an understandable and
-> efficient way.
->
-> Question 8: The lecturer was available when we had doubts.
->
-> Question 9. The lecturer treated all students equally regardless of their
-> race, background and ethnicity.
-
-These data are from the end of the winter semester of the 2020-2021 academic
-year. In the period of data collection, all university classes were entirely
-online amid the COVID-19 pandemic. While expected learning outcomes were not
-changed, the online mode of study could have affected grading policies and could
-have implications for data.
-
-**Average SET scores** were combined with many other variables, including:
-
-1.  **characteristics of the teacher** (degree, seniority, gender, SET scores in
-the past 6 semesters).
-2.  **characteristics of the course** (time of day, day of the week, course
-type, course breadth, class duration, class size).
-3.  **percentage of students providing SET feedback.**
-4.  **course grades** (mean, standard deviation, percentage failed for the
-current course and previous 6 semesters).
-
-This rich dataset allows us to **investigate many of the biases in student evaluations of teaching** that have been reported in the literature and to formulate new
-hypotheses.
-
-Before tackling the problems below, study the description of each variable
-included in the `teacher_evals_codebook.pdf` inside the "resources" folder.
-
-**1. Load the appropriate R packages for your analysis.**
+In the code chunk below, load in the packages necessary for your analysis. You should only need the `tidyverse` package for this analysis.
 
 ```{r}
 #| label: setup
-# code chunk for loading packages
 
 ```
 
-**2. Load in the `teacher_evals` data.** 
-*Hint: You should use the `here()` function from the __here__ package!*
+# Data Context
+
+The Portal Project is a long-term ecological study being conducted near Portal, AZ. Since 1977, the site has been used to study the interactions among rodents, ants, and plants, as well as their respective responses to climate. To study the interactions among organisms, researchers experimentally manipulated access to 24 study plots. This study has produced over 100 scientific papers and is one of the longest running ecological studies in the U.S.
+
+We will be investigating the animal species diversity and weights found within plots at the Portal study site. The data are stored as a comma separated value (CSV) file. Each row holds information for a single animal, and the columns represent:
+
+| Column            | Description                        |
+|-------------------|------------------------------------|
+| `record_id`       | Unique ID for the observation      |
+| `month`           | month of observation               |
+| `day`             | day of observation                 |
+| `year`            | year of observation                |
+| `plot_id`         | ID of a particular plot            |
+| `species_id`      | 2-letter code                      |
+| `sex`             | sex of animal ("M", "F")           |
+| `hindfoot_length` | length of the hindfoot in mm       |
+| `weight`          | weight of the animal in grams      |
+| `genus`           | genus of animal                    |
+| `species`         | species of animal                  |
+| `taxon`           | e.g. Rodent, Reptile, Bird, Rabbit |
+| `plot_type`       | type of plot                       |
+
+# Reading the Data into `R`
+
+We are going to use the `read_csv()` function to load in the `surveys.csv` dataset (stored in the data folder). For simplicity, name the data `surveys`.**
 
 ```{r}
 #| label: load-data
-# code chunk for importing the data
+
+surveys <- read_csv()
 
 ```
 
-### Data Inspection + Summary
+**2. What are the dimensions (# of rows and columns) of these data?**
 
-**3. Provide a brief overview (~4 sentences) of the dataset.**
+<!-- You can either write code here or in the code chunk for #1, but I **must** see the code you used to address this question!  -->
+
+**3. What are the data types of the variables in this dataset?**
+
+<!-- You can either write code here or in the code chunk for #1, but I **must** see the code you used to address this question!  -->
+
+# Exploratory Data Analysis with **`ggplot2`**
+
+`ggplot()` graphics are built step by step by adding new elements. Adding layers
+in this fashion allows for extensive flexibility and customization of plots.
+
+To build a `ggplot()`, we will use the following basic template that can be used
+for different types of plots:
 
 ```{r}
-#| label: explore-data
-# you may want to use code to answer this question
+#| eval: false
+#| label: ggplot-template-code
 
+ggplot(data = <DATA>,
+       mapping = aes(<VARIABLE MAPPINGS>)) +
+  <GEOM_FUNCTION>()
 ```
 
-**4. What is the unit of observation (i.e. a single row in the dataset) identified by?**
+Let's get started!
+
+## Scatterplot
+
+**4. First, let's create a scatterplot of the relationship between `weight` (on
+the $x$-axis) and `hindfoot_length` (on the $y$-axis).**
 
 ```{r}
-#| label: row-identification
-# you may want to use code to answer this question
+#| label: scatterplot
 
 ```
 
-**5. Use _one_ `dplyr` pipeline to clean the data by:**
+We can see there are **a lot** of points plotted on top of each other. Let's try and modify this plot to extract more information from it.
 
-- **renaming the `gender` variable `sex`**
-- **removing all courses with fewer than 10 respondents**
-- **changing data types in whichever way you see fit (e.g., is the instructor ID really a numeric data type?)**
-- **only keeping the columns we will use -- `course_id`, `teacher_id`, `question_no`, `no_participants`, `resp_share`, `SET_score_avg`, `percent_failed_cur`, `academic_degree`, `seniority`, and `sex`**
+**5. Let's add transparency (`alpha`) to the points, to make the points more transparent and (possibly) easier to see.**
 
-**Assign your cleaned data to a new variable named `teacher_evals_clean` –- use these data going forward.**
+<!-- Add code to the scatterplot you created for question 4! -->
+
+Despite our best efforts there is still a substantial amount of overplotting occurring in our scatterplot. Let's try splitting the dataset into smaller
+subsets and see if that allows for us to see the trends a bit better.
+
+**6. Facet your scatterplot by `species`.**
+
+<!-- Add code to the scatterplot you created for question 4 (and modified for question 5)! -->
+
+**7. No plot is complete without axis labels and a title. Include reader friendly labels and a title to your plot.**
+
+<!-- Continue to modify the plot you originally created for question 4! -->
+
+It takes a larger cognitive load to read text that is rotated. It is common practice in many journals and media outlets to move the $y$-axis label to the top of the graph under the title.
+
+**8. Specify your $y$-axis label to be empty and move the $y$-axis label into the subtitle.** 
+
+<!-- Continue to modify the plot you originally created for question 4! -->
+
+## Boxplots
 
 ```{r}
-#| label: data-cleaning
-# code chunk for Q4
+#| label: boxplot
+
 
 ```
 
-**6. How many unique instructors and unique courses are present in the cleaned dataset?**
+**10. Create side-by-side boxplots to visualize the distribution of weight within each species.**
+
+A fundamental complaint of boxplots is that they do not plot the raw data. However, with **ggplot** we can add the raw points on top of the boxplots!
+
+**11. Add another layer to your previous plot that plots each observation.**
+
+<!-- Modify the plot you made for question 10! -->
+
+Alright, this should look less than optimal. Your points should appear rather stacked on top of each other. To make them less stacked, we need to jitter them
+a bit, using `geom_jitter()`.
+
+**12. Remove the previous layer and include a `geom_jitter()` layer instead.**
+
+<!-- Continue to modify the plot you made for question 10! -->
+
+That should look a bit better! But its really hard to see the points when everything is black.
+
+**13. Set the `color` aesthetic in `geom_jitter()` to change the color of the points and add set the `alpha` aesthetic to add transparency.** You are welcome
+to use whatever color you wish! Some of my favorites are "orange3" and
+"steelblue".
+
+<!-- Continue to modify the plot you made for question 10! -->
+
+Great! Now that you can see the points, you should notice something odd: there
+are two colors of points still being plotted. Some of the observations are being plotted twice, once from `geom_boxplot()` as outliers and again from `geom_jitter()`!
+
+**14. Inspect the help file for `geom_boxplot()` and see how you can remove the outliers from being plotted by `geom_boxplot()`. Make this change in your code!**
+
+<!-- Continue to modify the plot you made for question 10! -->
+
+Some small changes can make **big** differences to plots. One of these changes
+are better labels for a plot's axes and legend.
+
+**15. Modify the $x$-axis and $y$-axis labels to describe what is being plotted. Be sure to include any necessary units! You might also be getting overlap in the species names -- use `theme(axis.text.x = ____)` or `theme(axis.text.y = ____)` to turn the species axis labels 45 degrees.**
+
+<!-- Continue to modify the plot you made for question 10! -->
+
+Some people (and journals) prefer for boxplots to be stacked with a specific orientation! Let's practice changing the orientation of our boxplots.
+
+**16. Now copy-paste your boxplot code you've been adding to above. Flip the orientation of your boxplots. If you created horizontally stacked boxplots, your boxplots should now be stacked vertically. If you had vertically stacked boxplots, you should now stack your boxplots horizontally!**
 
 ```{r}
-#| label: unique-courses
-# code chunk for Q5
+#| label: rotated-boxplot
 
 ```
 
-**7. One teacher-course combination has some missing values, coded as `NA`. Which instructor has these missing values? Which course? What variable are the missing values in?**
+Notice how vertically stacked boxplots make the species labels more readable
+than horizontally stacked boxplots (even when the axis labels are rotated). 
+This is good practice!
+
+# Conducting Statistical Analyses
+
+Exploratory Data Analysis (EDA) is always a great start to investigating a 
+dataset. Can we see a relationship between rodent weight and hindfoot length?
+How does rodent weight differ between species? After performing EDA, we can then
+conduct appropriate statistical analyses to formally investigate what we have
+seen.
+
+In this section, we are going to conduct a one-way analysis of variance (ANOVA)
+to compare mean weight between the fourteen different species of rodents. If 
+you would like a refresher on ANOVA, here's a good chapter to read: https://openintro-ims.netlify.app/inference-many-means).
+
+With an ANOVA, we have two hypotheses:
+
+$H_0$: The population mean weight is the same between **all** fourteen rodent species.
+
+$H_A$: **At least one** rodent species has a different population mean weight.
+
+We're going to use the `aov()` function to carry out an ANOVA. 
+
+**17. Using `aov()`, complete the code below to carry out the analysis.** You 
+might want to look up the help documentation for `aov()`.
 
 ```{r}
-#| label: uncovering-missing-values
-# code chunk for Q6
+#| label: anova
 
+species_mod <- aov()
+
+summary(species_mod)
 ```
 
-**8. What are the demographics of the instructors in this study? Investigate the variables `academic_degree`, `seniority`, and `sex` and summarize your findings in ~3 complete sentences.**
+**18. Based on the results of the ANOVA F-test, draw a conclusion in context of the hypotheses. Make sure to cite appropriate output from above.**
 
-```{r}
-#| label: exploring-demographics-of-instructors
-# code chunk for Q7
 
-```
+# Lab 2 Submission
 
-**9. Each course seems to have used a different subset of the nine evaluation questions. How many teacher-course combinations asked all nine questions?**
+For Lab 2 you will submit **only** your HTML file. Your HTML file is required to have the following specifications in the YAML options (at the top of your document):
 
-```{r}
-#| label: teacher-course-asked-every-question
-# code chunk for Q8
+-   have the plots embedded (`embed-resources: true`)
+-   include your source code (`code-tools: true`)
+-   include all your code and output (`echo: true`)
 
-```
+**If any of the options are not included, your Lab 2 or Challenge 2 assignment will receive an "Incomplete" and you will be required to submit a revision.**
 
-## Rate my Professor
-
-**10. Which instructors had the highest and lowest average rating for Question 1 (I learnt a lot during the course.) across all their courses?**
-
-```{r}
-#| label: question-1-high-low
-# code chunk for Q9
-
-```
-
-**11. Which instructors with one year of experience had the highest and lowest average percentage of students failing in the current semester across all their courses?**
-
-```{r}
-#| label: one-year-experience-failing-students
-# code chunk for Q10
-
-```
-
-**12. Which female instructors with either a doctorate or professor degree had the highest and lowest average percent of students responding to the evaluation across all their courses?**
-
-```{r}
-#| label: female-instructor-student-response
-# code chunk for Q11
-
-```
+In addition, your document should not have any warnings or messages output in your HTML document. **If your HTML contains warnings or messages, you will receive an "Incomplete" for document formatting and you will be required to submit a revision.**
